# applyverse

./: .env.example  .gitignore  Caddyfile  README.md  docker-compose.https.yml  docker-compose.prod.yml  docker-compose.yml  nginx.conf
backend/: Dockerfile  companies.yaml  pyproject.toml
backend/alembic/versions/: 001_initial_schema.py  002_source_settings.py  003_keyword_pipeline.py
backend/app/: config.py  main.py  models.py  prune.py  schemas.py  seed.py  worker.py
backend/app/api/: applications.py  companies.py  jobs.py  scrape.py  settings.py  stats.py
backend/app/scrapers/: ashby.py  base.py  greenhouse.py  lever.py  linkedin.py  naukri.py  recruitee.py  registry.py  remoteok.py  smartrecruiters.py  wellfound.py  weworkremotely.py  workable.py
backend/app/services/: dedupe.py  discover.py  filtering.py  freshness.py  llm_discover.py  web_discover.py
frontend/: Dockerfile  package-lock.json  package.json  proxy.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(app)/: layout.tsx
frontend/app/(app)/companies/: page.tsx
frontend/app/(app)/jobs/[id]/: page.tsx
frontend/app/api/auth/login/: route.ts
frontend/app/companies/: page.tsx
frontend/app/jobs/: page.tsx
frontend/app/login/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/tracker/: page.tsx
frontend/components/: job-card.tsx  sidebar.tsx
frontend/components/ui/: button.tsx  card.tsx
frontend/lib/: api.ts  auth.ts  format.ts  types.ts
