[project]
name = "jobscrap-backend"
version = "0.1.0"
description = "Job scraper + application tracker backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "tenacity>=9.0",
    "feedparser>=6.0",
    "pyyaml>=6.0",
    "apscheduler>=3.10,<4",
    "python-dateutil>=2.9",
    "playwright>=1.48",
    "ddgs>=9.0",
    "anthropic>=0.40",
]

[tool.setuptools.packages.find]
include = ["app*"]
